add error handling test